eks cluster creation file

--- a/cluste-01.yaml
+++ b/cluste-01.yaml
@@ -1,14 +1,16 @@
-apiVersion: ksctl.io/v1alpha5
+apiVersion: eksctl.io/v1alpha5
 kind: ClusterConfig
+
 metadata:
-  name: expense-cluster 
+  name: expense-cluster
   region: us-east-1
+
 managedNodeGroups:
   - name: expense
     instanceType: m5.large
     desiredCapacity: 3
-    spot: yes 
-
+    spot: yes
+ 
   
 
 
